--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5001
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=express-crud
+DB_NAME=POSTGRES_DB_NAME
 DB_PORT=5432
-DB_PASSWORD=Aadi9027
+DB_PASSWORD=POSTGRES_PASSWORD
